Version 0.5.x -
----------------------------
- New: added config file
- New: added possibility to publish config and view files


Version 0.4.2 - Dec 31, 2020
----------------------------
- Fix: wrong argument exception in Pagination class


Version 0.4.1 - Dec 30, 2020
----------------------------
- Fix: in rendering of Filter section


Version 0.4.0 - Dec 30, 2020
----------------------------
- Enh: code refactoring in DataGridServiceProvider
- Enh: HTML code extracted to view blade files
- Enh: min PHP version is defined as PHP 7.1


Version 0.3.1 - Dec 26, 2020
----------------------------
- Fix: class Message comply with psr-0 autoloading standard


Version 0.3.0 - Dec 26, 2020
----------------------------
- New: added "jenssegers/agent": "^2.6" dependency for mobile view support
- Eng: class Messages renamed into Message
- Eng: updated README examples


Version 0.2.0 - Dec 23, 2020
----------------------------
- New: added view files
- New: added new class messages
- Enh: changes in README


Version 0.1.0 - Dec 21, 2020
----------------------------
- New: package renamed into apphp/laravel-datagrid
- New: added DataGridServiceProvider


Version 0.0.1 - Dec 20, 2020 (Initial release)
----------------------------
- New: created main structure
