@@ -1,0 +1,20 @@
+<?php
+
+namespace Apphp\DataGrid\Tests;
+
+use Tests\TestCase;
+use Apphp\DataGrid\Message;
+
+
+class TestDataGridMessage extends TestCase
+{
+
+    /**
+     * Test
+     */
+    public function testTest(): void
+    {
+        $this->assertEquals(true, true);
+    }
+
+}
